--- a/src/app/places/offers/new-offer/new-offer.page.html
+++ b/src/app/places/offers/new-offer/new-offer.page.html
@@ -1,13 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-back-button text='' defaultHref='/places/tabs/offers'></ion-back-button>
     </ion-buttons>
-    <ion-title>
-      List
-    </ion-title>
+    <ion-title>new-offer</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
 </ion-content>
