--- a/src/app/places/discover/page-detail/page-detail.page.html
+++ b/src/app/places/discover/page-detail/page-detail.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button text='' defaultHref='places/tabs/discover'></ion-back-button>
     </ion-buttons>
-    <ion-title>page-detail</ion-title>
+    <ion-title>{{ place.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
